--- a/submission/assessment2.ipynb
+++ b/submission/assessment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGEaq1qPV2FOv3PKTqAd3T",
+      "authorship_tag": "ABX9TyM0ucmKb29I1Q+x4lsf8jsE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,32 +34,101 @@
       },
       "outputs": [],
       "source": [
-        "# Setup and Configuration\n",
+        "# Setup and Imports\n",
+        "!pip install fetch-my-weather\n",
+        "!pip install hands-on-ai\n",
         "\n",
+        "os.environ['HANDS_ON_AI_SERVER'] = 'http://ollama.serveur.au'\n",
+        "os.environ['HANDS_ON_AI_MODEL'] = 'granite3.2'\n",
+        "os.environ['HANDS_ON_AI_API_KEY'] = input('Enter your API key: ')\n",
+        "\n",
+        "# Setup and Configuation\n",
+        "import requests\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pyinputplus as pyip\n",
+        "from fetch_my_weather import get_weather\n",
+        "from hands_on_ai.chat import get_response\n",
         "\n",
         "\n",
         "# Weather Data Functions\n",
+        "def get_weather_data(location, forecast_days=5):\n",
+        "    \"\"\"\n",
+        "    Retrieve weather data for a specified location.\n",
         "\n",
+        "    Args:\n",
+        "        location (str): City or location name\n",
+        "        forecast_days (int): Number of days to forecast (1-5)\n",
+        "\n",
+        "    Returns:\n",
+        "        dict: Weather data including current conditions and forecast\n",
+        "    \"\"\"\n",
+        "    pass\n",
         "\n",
         "\n",
         "# Visualisation Functions\n",
+        "def create_temperature_visualisation(weather_data, output_type='display'):\n",
+        "    \"\"\"\n",
+        "    Create visualisation of temperature data.\n",
         "\n",
+        "    Args:\n",
+        "        weather_data (dict): The processed weather data\n",
+        "        output_type (str): Either 'display' to show in notebook or 'figure' to return the figure\n",
         "\n",
+        "    Returns:\n",
+        "        If output_type is 'figure', returns the matplotlib figure object\n",
+        "        Otherwise, displays the visualisation in the notebook\n",
+        "    \"\"\"\n",
+        "    pass\n",
+        "\n",
+        "def create_precipitation_visualisation(weather_data, output_type='display'):\n",
+        "    \"\"\"\n",
+        "    Create visualisation of precipitation data.\n",
+        "\n",
+        "    Args:\n",
+        "        weather_data (dict): The processed weather data\n",
+        "        output_type (str): Either 'display' to show in notebook or 'figure' to return the figure\n",
+        "\n",
+        "    Returns:\n",
+        "        If output_type is 'figure', returns the matplotlib figure object\n",
+        "        Otherwise, displays the visualisation in the notebook\n",
+        "    \"\"\"\n",
+        "    pass\n",
         "\n",
         "# Natural Language Processing\n",
+        "def parse_weather_question(question):\n",
+        "    \"\"\"\n",
+        "    Parse a natural language weather question.\n",
         "\n",
+        "    Args:\n",
+        "        question (str): User's weather-related question\n",
+        "\n",
+        "    Returns:\n",
+        "        dict: Extracted information including location, time period, and weather attribute\n",
+        "    \"\"\"\n",
+        "    pass\n",
         "\n",
         "\n",
         "# User Interface\n",
-        "\n",
+        "# Define menu functions using pyinputplus or ipywidgets here\n",
         "\n",
         "\n",
         "# Main Application Logic\n",
+        "def generate_weather_response(parsed_question, weather_data):\n",
+        "    \"\"\"\n",
+        "    Generate a natural language response to a weather question.\n",
         "\n",
+        "    Args:\n",
+        "        parsed_question (dict): Parsed question data\n",
+        "        weather_data (dict): Weather data\n",
+        "\n",
+        "    Returns:\n",
+        "        str: Natural language response\n",
+        "    \"\"\"\n",
+        "    pass\n",
         "\n",
         "\n",
         "# Testing and Examples\n",
-        "\n"
+        "# Include sample input/output for each function\n"
       ]
     }
   ]
