Add main script

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -34,6 +34,31 @@
         "\n",
         "\n",
         "# Weather Data Functions\n",
+        "\n",
+        "def get_user_location():\n",
+        "  \"\"\"ユーザーから場所の入力を受け取る\"\"\"\n",
+        "  pass\n",
+        "\n",
+        "def get_user_date():\n",
+        "  \"\"\"ユーザーから日付情報（today/tomorrow/具体的日付）を受け取る\"\"\"\n",
+        "  pass\n",
+        "\n",
+        "def convert_to_date(date_input):\n",
+        "  \"\"\"today/tomorrowを実際の日付（YYYY-MM-DD）に変換\"\"\"\n",
+        "  pass\n",
+        "\n",
+        "def get_weather_data(location, date):\n",
+        "  \"\"\"fetch-my-weatherを使って天気データを取得\"\"\"\n",
+        "  pass\n",
+        "\n",
+        "def generate_weather_graph(weather_data):\n",
+        "  \"\"\"matplotlibを使って天気のグラフを作成\"\"\"\n",
+        "  pass\n",
+        "\n",
+        "def respond_to_user(graph_image, summary_text):\n",
+        "  \"\"\"ユーザーに結果を返す（グラフ+テキスト）\"\"\"\n",
+        "  pass\n",
+        "\n",
         "# Define get_weather_data() function here\n",
         "def get_weather_data(location, forecast_days=5):\n",
         "    \"\"\"\n",
@@ -80,11 +105,6 @@
         "    pass\n",
         "\n",
         "\n",
-        "# User Interface\n",
-        "\n",
-        "\n",
-        "# Main Application Logic\n",
-        "# Tie everything together here\n",
         "def generate_weather_response(parsed_question, weather_data):\n",
         "    \"\"\"\n",
         "    Generate a natural language response to a weather question.\n",
@@ -99,6 +119,40 @@
         "    pass\n",
         "\n",
         "\n",
+        "# User Interface\n",
+        "\n",
+        "\n",
+        "# Main Application Logic\n",
+        "while True:\n",
+        "  location = input(\"Hi I'm Weatherwise App!\\nI can help you check the weather forecast.\\nWhich city are you interested in? (type 'exit' to quit)\\n\")\n",
+        "\n",
+        "  if location.lower() == 'exit':\n",
+        "    print(\"Goodbye! Have a nice day!\")\n",
+        "    break\n",
+        "\n",
+        "  date = input(\"Which date do you want to know the weather? (e.g. 2025-05-28)\\n\")\n",
+        "  if location.lower() == 'exit':\n",
+        "    print(\"Goodbye! Have a nice day!\")\n",
+        "    break\n",
+        "\n",
+        "  try:\n",
+        "    weather_data = get_weather_data(location, date)\n",
+        "\n",
+        "    if weather_data:\n",
+        "      create_temperature_visualisation(weather_data)\n",
+        "      create_precipitation_visualisation(weather_data)\n",
+        "      break\n",
+        "    else:\n",
+        "      print(\"Sorry, I couldn't fetch the weather data. Please try again.\\n\")\n",
+        "\n",
+        "  except Exception as e:\n",
+        "    print(f\"An error occurred: {e}\")\n",
+        "    print(\"Please try again.\\n\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "# Testing and Examples\n",
         "# Include sample input/output for each function"
       ],
@@ -106,6 +160,16 @@
         "id": "B2JKlJfrGgIb"
       },
       "id": "B2JKlJfrGgIb",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KWqPhNMxvz83"
+      },
+      "id": "KWqPhNMxvz83",
       "execution_count": null,
       "outputs": []
     }
@@ -117,6 +181,10 @@
     "colab": {
       "provenance": [],
       "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "nbformat": 4,
