--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -12,6 +12,16 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KWqPhNMxvz83"
+      },
+      "id": "KWqPhNMxvz83",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# 🧪 Optional packages — uncomment if needed in Colab or JupyterHub\n",
         "!pip install fetch-my-weather\n",
@@ -29,6 +39,7 @@
         "import pyinputplus as pyip\n",
         "from fetch_my_weather import get_weather\n",
         "from hands_on_ai.chat import get_response\n",
+        "import re\n",
         "\n",
         "# Add any other setup code here\n",
         "\n",
@@ -37,18 +48,6 @@
         "\n",
         "def get_user_location():\n",
         "  \"\"\"ユーザーから場所の入力を受け取る\"\"\"\n",
-        "  pass\n",
-        "\n",
-        "def get_user_date():\n",
-        "  \"\"\"ユーザーから日付情報（today/tomorrow/具体的日付）を受け取る\"\"\"\n",
-        "  pass\n",
-        "\n",
-        "def convert_to_date(date_input):\n",
-        "  \"\"\"today/tomorrowを実際の日付（YYYY-MM-DD）に変換\"\"\"\n",
-        "  pass\n",
-        "\n",
-        "def get_weather_data(location, date):\n",
-        "  \"\"\"fetch-my-weatherを使って天気データを取得\"\"\"\n",
         "  pass\n",
         "\n",
         "def generate_weather_graph(weather_data):\n",
@@ -60,19 +59,64 @@
         "  pass\n",
         "\n",
         "# Define get_weather_data() function here\n",
-        "def get_weather_data(location, forecast_days=5):\n",
-        "    \"\"\"\n",
-        "    Retrieve weather data for a specified location.\n",
+        "def get_weather_data(location: str, forecase_days: int = 3) -> dict:\n",
+        "  if forecast_days < 1 or forecast_days > 5:\n",
+        "    return {\"error\": \"forecast_days must be between 1 and 5\"}\n",
         "\n",
-        "    Args:\n",
-        "        location (str): City or location name\n",
-        "        forecast_days (int): Number of days to forecast (1-5)\n",
+        "  # Convert forecast_days to view_options (0 = 1 day, 1 = 2 days, ..., 4 = 5 days)\n",
+        "  view_option = str(forecast_days - 1)\n",
         "\n",
-        "    Returns:\n",
-        "        dict: Weather data including current conditions and forecast\n",
-        "    \"\"\"\n",
-        "    pass\n",
+        "  # Fetch raw text weather data\n",
+        "  raw_text = fetch_my_weather.get_weather(\n",
+        "    location=location,\n",
+        "    view_option=view_option,\n",
+        "    lang=\"en\"\n",
+        "  )\n",
         "\n",
+        "  if isinstance(raw_text, str) and raw_text.startwith(\"Error:\"):\n",
+        "    return {\"error\": raw_text}\n",
+        "\n",
+        "  # Regex to extract high/low temps and precipitation\n",
+        "  temp_rain_pattern = r'([+\\-]?\\d+°C)\\s*/\\s*([+\\-]?\\d+°C).*?rain:\\s*([\\d.]+)mm'\n",
+        "  matches = re.findall(temp_rain_pattern, raw_text)\n",
+        "\n",
+        "  # Regex to extract weather conditions (e.g., Sunny, Cloudy, Rain)\n",
+        "  condition_pattern = r'\\n\\s*[☀️🌤️🌧️🌩️❄️☁️⛅️]*\\s*([A-Z][a-z]+)'\n",
+        "  conditions = re.findall(condition_pattern, raw_text)\n",
+        "\n",
+        "  forecast = []\n",
+        "  for i in range(min(forecast_days, len(matches))):\n",
+        "    high, low, rain = matches[i]\n",
+        "    condition = conditions[i] if i < len(conditions) else \"Unknown\"\n",
+        "    forecast.append({\n",
+        "      \"day\": i + 1,\n",
+        "      \"condition\": condition,\n",
+        "      \"high_temp\": high,\n",
+        "      \"low_temp\": low,\n",
+        "      \"precipitation_mm\": float(rain)\n",
+        "      })\n",
+        "\n",
+        "    return {\n",
+        "      \"location\": location,\n",
+        "      \"forecast_days\": len(forecast),\n",
+        "      \"forecast\": forecast\n",
+        "    }\n",
+        "\n",
+        "\n",
+        "  # Connection error\n",
+        "  except ConnectionError:\n",
+        "    print(\"Network error. Please check your connection and try again.\")\n",
+        "    return None\n",
+        "\n",
+        "  # Value error\n",
+        "  except ValueError as ve:\n",
+        "    print(f\"Invalid input value: {ve}\")\n",
+        "    return None\n",
+        "\n",
+        "  # Unexpected error\n",
+        "  except Exception as e:\n",
+        "    print(f\"❌ An unexpected error occurred: {e}\")\n",
+        "    return None\n",
         "\n",
         "# Visualisation Functions\n",
         "# Define create_temperature_visualisation() and create_precipitation_visualisation() here\n",
@@ -118,38 +162,47 @@
         "    \"\"\"\n",
         "    pass\n",
         "\n",
+        "# Main function\n",
+        "def main():\n",
+        "  print(\"Hi I'm Weatherwise App!\")\n",
+        "  print(\"I can help you check the weather forecast.\")\n",
+        "\n",
+        "  while True:\n",
+        "    try:\n",
+        "      location = input(\"Which city are you interested in? (type 'exit' to quit)\\n\")\n",
+        "      if location.lower() == 'exit':\n",
+        "        print(\"Goodbye! Have a nice day!\")\n",
+        "        break\n",
+        "\n",
+        "      if not location:\n",
+        "        print(\"Please enter a city name.\")\n",
+        "        continue\n",
+        "\n",
+        "      weather_data = get_weather_data(location)\n",
+        "      if not weather_data or 'error' in weather_data:\n",
+        "        print(f\"Sorry, I couldn't find weather data for '{location}'. Please try another city.\")\n",
+        "        continue\n",
+        "\n",
+        "      create_temperature_visualisation(weather_data)\n",
+        "      create_precipitation_visualisation(weather_data)\n",
+        "\n",
+        "    except ConnectionError:\n",
+        "      print(\"It looks like there's a problem with your internet connection. Please check and try again.\")\n",
+        "    except Exception as e:\n",
+        "      print(\"Sorry, I couldn't fetch the weather data. Please try again.\\n\")\n",
+        "\n",
+        "  except Exception as e:\n",
+        "    print(f\"Oops! Something went wrong: {e}\")\n",
+        "    print(\"Please try again or contact support if the issue persists.\")\n",
         "\n",
         "# User Interface\n",
         "\n",
         "\n",
         "# Main Application Logic\n",
-        "while True:\n",
-        "  location = input(\"Hi I'm Weatherwise App!\\nI can help you check the weather forecast.\\nWhich city are you interested in? (type 'exit' to quit)\\n\")\n",
-        "\n",
-        "  if location.lower() == 'exit':\n",
-        "    print(\"Goodbye! Have a nice day!\")\n",
-        "    break\n",
-        "\n",
-        "  date = input(\"Which date do you want to know the weather? (e.g. 2025-05-28)\\n\")\n",
-        "  if location.lower() == 'exit':\n",
-        "    print(\"Goodbye! Have a nice day!\")\n",
-        "    break\n",
-        "\n",
-        "  try:\n",
-        "    weather_data = get_weather_data(location, date)\n",
-        "\n",
-        "    if weather_data:\n",
-        "      create_temperature_visualisation(weather_data)\n",
-        "      create_precipitation_visualisation(weather_data)\n",
-        "      break\n",
-        "    else:\n",
-        "      print(\"Sorry, I couldn't fetch the weather data. Please try again.\\n\")\n",
-        "\n",
-        "  except Exception as e:\n",
-        "    print(f\"An error occurred: {e}\")\n",
-        "    print(\"Please try again.\\n\")\n",
         "\n",
         "\n",
+        "if __name__ == '__main__':\n",
+        "    main()\n",
         "\n",
         "\n",
         "\n",
@@ -160,16 +213,6 @@
         "id": "B2JKlJfrGgIb"
       },
       "id": "B2JKlJfrGgIb",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KWqPhNMxvz83"
-      },
-      "id": "KWqPhNMxvz83",
       "execution_count": null,
       "outputs": []
     }
