Add preprocess_forecast_data() and create_visualisation()

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -23,7 +23,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# 🧪 Optional packages — uncomment if needed in Colab or JupyterHub\n",
         "!pip install fetch-my-weather\n",
         "!pip install hands-on-ai\n",
         "\n",
@@ -41,24 +40,9 @@
         "from hands_on_ai.chat import get_response\n",
         "import re\n",
         "\n",
-        "# Add any other setup code here\n",
-        "\n",
         "\n",
         "# Weather Data Functions\n",
-        "\n",
-        "def get_user_location():\n",
-        "  \"\"\"ユーザーから場所の入力を受け取る\"\"\"\n",
-        "  pass\n",
-        "\n",
-        "def generate_weather_graph(weather_data):\n",
-        "  \"\"\"matplotlibを使って天気のグラフを作成\"\"\"\n",
-        "  pass\n",
-        "\n",
-        "def respond_to_user(graph_image, summary_text):\n",
-        "  \"\"\"ユーザーに結果を返す（グラフ+テキスト）\"\"\"\n",
-        "  pass\n",
-        "\n",
-        "# Define get_weather_data() function here\n",
+        "# get_weather_data()\n",
         "def get_weather_data(location: str, forecase_days: int = 3) -> dict:\n",
         "  if forecast_days < 1 or forecast_days > 5:\n",
         "    return {\"error\": \"forecast_days must be between 1 and 5\"}\n",
@@ -102,7 +86,6 @@
         "      \"forecast\": forecast\n",
         "    }\n",
         "\n",
-        "\n",
         "  # Connection error\n",
         "  except ConnectionError:\n",
         "    print(\"Network error. Please check your connection and try again.\")\n",
@@ -115,24 +98,55 @@
         "\n",
         "  # Unexpected error\n",
         "  except Exception as e:\n",
-        "    print(f\"❌ An unexpected error occurred: {e}\")\n",
+        "    print(f\"An unexpected error occurred: {e}\")\n",
         "    return None\n",
         "\n",
         "# Visualisation Functions\n",
-        "# Define create_temperature_visualisation() and create_precipitation_visualisation() here\n",
-        "def create_temperature_visualisation(weather_data, output_type='display'):\n",
-        "    \"\"\"\n",
-        "    Create visualisation of temperature data.\n",
+        "# preprocess_forecast_data()\n",
+        "def preprocess_forecast_data(raw_data):\n",
+        "  processed = []\n",
+        "  for entry in raw_data:\n",
+        "    high = int(entry['high_temp'].replace(\"°C\", \"\").replace(\"+\", \"\"))\n",
+        "    low = int(entry['low_temp'].replace(\"°C\", \"\").replace(\"+\", \"\"))\n",
+        "    processed.append({\n",
+        "      \"day\": entry['day'],\n",
+        "      \"high_temp\": high,\n",
+        "      \"low_temp\": low,\n",
+        "      \"precipitation_mm\": entry['precipitation_mm']\n",
+        "    })\n",
+        "  return processed\n",
         "\n",
-        "    Args:\n",
-        "        weather_data (dict): The processed weather data\n",
-        "        output_type (str): Either 'display' to show in notebook or 'figure' to return the figure\n",
+        "# create_visualisation()\n",
+        "def create_visualisation(weather_data, output_type='display'):\n",
+        "  days = [entry['day'] for entry in weather_data]\n",
+        "  high_temps = [entry['high_temp'] for entry in weather_data]\n",
+        "  low_temps = [entry['low_temp'] for entry in weather_data]\n",
+        "  precipitation = [entry['precipitation_mm'] for entry in weather_data]\n",
         "\n",
-        "    Returns:\n",
-        "        If output_type is 'figure', returns the matplotlib figure object\n",
-        "        Otherwise, displays the visualisation in the notebook\n",
-        "    \"\"\"\n",
-        "    pass\n",
+        "  fig, ax1 = plt.subplots(figsize=(10, 6))\n",
+        "\n",
+        "  # Plot temperature lines on left y-axis\n",
+        "  ax1.plot(days, high_temps, color='red', marker='o', label='High Temp (°C)')\n",
+        "  ax1.plot(days, low_temps, color='blue', marker='o', label='Low Temp (°C)')\n",
+        "  ax1.set_xlabel('Day')\n",
+        "  ax1.set_ylabel('Temperature (°C)')\n",
+        "  ax1.legend(loc='upper left')\n",
+        "\n",
+        "  # Create second y-axis for precipitation bars\n",
+        "  ax2 = ax1.twinx()\n",
+        "  ax2.bar(days, precipitation, alpha=0.3, color='blue', label='Precipitation (mm)')\n",
+        "  ax2.set_ylabel('Precipitation (mm)')\n",
+        "  ax2.legend(loc='upper right')\n",
+        "\n",
+        "  plt.title('Weather Forecast: Temperature and Precipitation')\n",
+        "  plt.tight_layout()\n",
+        "\n",
+        "  if output_type == 'figure':\n",
+        "    return fig\n",
+        "  else:\n",
+        "    plt.show()\n",
+        "    plt.close()\n",
+        "\n",
         "\n",
         "# Natural Language Processing\n",
         "# Define parse_weather_question() and generate_weather_response() here\n",
@@ -179,21 +193,25 @@
         "        continue\n",
         "\n",
         "      weather_data = get_weather_data(location)\n",
-        "      if not weather_data or 'error' in weather_data:\n",
+        "      if \"error\" not in weather_data:\n",
+        "        forecast_raw = weather_data['forecast']\n",
+        "        forecast_processed = preprocess_forecast_data(forecast_raw)\n",
+        "\n",
+        "        print(\"\\nWeather Forecast:\")\n",
+        "        for raw, proc in zip(forecast_raw, forecast_processed):\n",
+        "          print(f\"Day {proc['day']}: {raw['condition']}, \"\n",
+        "          f\"High: {proc['high_temp']}°C, Low: {proc['low_temp']}°C, \"\n",
+        "          f\"Rain: {proc['precipitation_mm']} mm\")\n",
+        "        create_visualisation(forecast_processed)\n",
+        "      else:\n",
         "        print(f\"Sorry, I couldn't find weather data for '{location}'. Please try another city.\")\n",
         "        continue\n",
-        "\n",
-        "      create_temperature_visualisation(weather_data)\n",
-        "      create_precipitation_visualisation(weather_data)\n",
         "\n",
         "    except ConnectionError:\n",
         "      print(\"It looks like there's a problem with your internet connection. Please check and try again.\")\n",
         "    except Exception as e:\n",
-        "      print(\"Sorry, I couldn't fetch the weather data. Please try again.\\n\")\n",
-        "\n",
-        "  except Exception as e:\n",
-        "    print(f\"Oops! Something went wrong: {e}\")\n",
-        "    print(\"Please try again or contact support if the issue persists.\")\n",
+        "      print(f\"Oops! Something went wrong: {e}\")\n",
+        "      print(\"Please try again or contact support if the issue persists.\")\n",
         "\n",
         "# User Interface\n",
         "\n",
