--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -43,7 +43,7 @@
         "\n",
         "# Weather Data Functions\n",
         "# get_weather_data()\n",
-        "def get_weather_data(location: str, forecase_days: int = 3) -> dict:\n",
+        "def get_weather_data(location: str, forecast_days: int = 3) -> dict:\n",
         "  if forecast_days < 1 or forecast_days > 5:\n",
         "    return {\"error\": \"forecast_days must be between 1 and 5\"}\n",
         "\n",
@@ -57,7 +57,7 @@
         "    lang=\"en\"\n",
         "  )\n",
         "\n",
-        "  if isinstance(raw_text, str) and raw_text.startwith(\"Error:\"):\n",
+        "  if isinstance(raw_text, str) and raw_text.startswith(\"Error:\"):\n",
         "    return {\"error\": raw_text}\n",
         "\n",
         "  # Regex to extract high/low temps and precipitation\n",
@@ -80,11 +80,11 @@
         "      \"precipitation_mm\": float(rain)\n",
         "      })\n",
         "\n",
-        "    return {\n",
-        "      \"location\": location,\n",
-        "      \"forecast_days\": len(forecast),\n",
-        "      \"forecast\": forecast\n",
-        "    }\n",
+        "  return {\n",
+        "    \"location\": location,\n",
+        "    \"forecast_days\": len(forecast),\n",
+        "    \"forecast\": forecast\n",
+        "  }\n",
         "\n",
         "  # Connection error\n",
         "  except ConnectionError:\n",
