Change graph title

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -12,16 +12,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KWqPhNMxvz83"
-      },
-      "id": "KWqPhNMxvz83",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "!pip install fetch-my-weather\n",
         "!pip install hands-on-ai\n",
@@ -138,7 +128,7 @@
         "  ax2.set_ylabel('Precipitation (mm)')\n",
         "  ax2.legend(loc='upper right')\n",
         "\n",
-        "  plt.title('Weather Forecast: Temperature and Precipitation')\n",
+        "  plt.title(f'Weather Forecast for {weather_data[\"location\"]}: Temperature and Precipitation')\n",
         "  plt.tight_layout()\n",
         "\n",
         "  if output_type == 'figure':\n",
