Add comments and graph annotation

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -30,9 +30,10 @@
         "from hands_on_ai.chat import get_response\n",
         "import re\n",
         "\n",
-        "\n",
-        "# Weather Data Functions\n",
-        "# get_weather_data()\n",
+        "# =====================================\n",
+        "# 1. Weather Data Functions\n",
+        "# =====================================\n",
+        "# Get weather data\n",
         "def get_weather_data(location: str, forecast_days: int = 3) -> dict:\n",
         "  if forecast_days < 1 or forecast_days > 5:\n",
         "    return {\"error\": \"forecast_days must be between 1 and 5\"}\n",
@@ -91,8 +92,10 @@
         "    print(f\"An unexpected error occurred: {e}\")\n",
         "    return None\n",
         "\n",
-        "# Visualisation Functions\n",
-        "# preprocess_forecast_data()\n",
+        "# =====================================\n",
+        "# 2. preprocess_forecast_data()\n",
+        "# =====================================\n",
+        "# Preprocess the forecast\n",
         "def preprocess_forecast_data(raw_data):\n",
         "  processed = []\n",
         "  for entry in raw_data:\n",
@@ -106,8 +109,11 @@
         "    })\n",
         "  return processed\n",
         "\n",
-        "# create_visualisation()\n",
-        "def create_visualisation(weather_data, output_type='display'):\n",
+        "# =====================================\n",
+        "# 3. Visualisation Functions\n",
+        "# =====================================\n",
+        "# Show the weather forecast\n",
+        "def create_visualisation(weather_data: list[dict], output_type: str = 'display') -> None:\n",
         "  days = [entry['day'] for entry in weather_data]\n",
         "  high_temps = [entry['high_temp'] for entry in weather_data]\n",
         "  low_temps = [entry['low_temp'] for entry in weather_data]\n",
@@ -128,11 +134,25 @@
         "  ax2.set_ylabel('Precipitation (mm)')\n",
         "  ax2.legend(loc='upper right')\n",
         "\n",
+        "  for i, condition in enumerate([entry.get('condition', '') for entry in weather_data]):\n",
+        "    ax1.annotate(\n",
+        "      condition,\n",
+        "      (days[i], high_temps[i] + 1),\n",
+        "      textcoords=\"offset points\",\n",
+        "      xytext=(0, 5),\n",
+        "      ha='center',\n",
+        "      fontsize=8,\n",
+        "      color='darkgreen'\n",
+        "    )\n",
+        "\n",
         "  plt.title(f'Weather Forecast for {weather_data[\"location\"]}: Temperature and Precipitation')\n",
         "  plt.tight_layout()\n",
         "\n",
         "  if output_type == 'figure':\n",
         "    return fig\n",
+        "  elif output_type == 'save':\n",
+        "    plt.savefig(f\"{weather_data['location']}_forecast.png\")\n",
+        "    print(\"Graph saved!\")\n",
         "  else:\n",
         "    plt.show()\n",
         "    plt.close()\n",
@@ -166,7 +186,9 @@
         "    \"\"\"\n",
         "    pass\n",
         "\n",
-        "# Main function\n",
+        "# =====================================\n",
+        "# 4. Main function\n",
+        "# =====================================\n",
         "def main():\n",
         "  print(\"Hi I'm Weatherwise App!\")\n",
         "  print(\"I can help you check the weather forecast.\")\n",
@@ -203,12 +225,10 @@
         "      print(f\"Oops! Something went wrong: {e}\")\n",
         "      print(\"Please try again or contact support if the issue persists.\")\n",
         "\n",
-        "# User Interface\n",
         "\n",
-        "\n",
-        "# Main Application Logic\n",
-        "\n",
-        "\n",
+        "# =====================================\n",
+        "# 5. Main Script\n",
+        "# =====================================\n",
         "if __name__ == '__main__':\n",
         "    main()\n",
         "\n",
