Fix bug (try in get_weather_data())

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -35,47 +35,48 @@
         "# =====================================\n",
         "# Get weather data\n",
         "def get_weather_data(location: str, forecast_days: int = 3) -> dict:\n",
-        "  if forecast_days < 1 or forecast_days > 5:\n",
-        "    return {\"error\": \"forecast_days must be between 1 and 5\"}\n",
+        "  try:\n",
+        "    if forecast_days < 1 or forecast_days > 5:\n",
+        "      return {\"error\": \"forecast_days must be between 1 and 5\"}\n",
         "\n",
-        "  # Convert forecast_days to view_options (0 = 1 day, 1 = 2 days, ..., 4 = 5 days)\n",
-        "  view_option = str(forecast_days - 1)\n",
+        "    # Convert forecast_days to view_options (0 = 1 day, 1 = 2 days, ..., 4 = 5 days)\n",
+        "    view_option = str(forecast_days - 1)\n",
         "\n",
-        "  # Fetch raw text weather data\n",
-        "  raw_text = fetch_my_weather.get_weather(\n",
-        "    location=location,\n",
-        "    view_option=view_option,\n",
-        "    lang=\"en\"\n",
-        "  )\n",
+        "    # Fetch raw text weather data\n",
+        "    raw_text = fetch_my_weather.get_weather(\n",
+        "      location=location,\n",
+        "      view_option=view_option,\n",
+        "      lang=\"en\"\n",
+        "    )\n",
         "\n",
-        "  if isinstance(raw_text, str) and raw_text.startswith(\"Error:\"):\n",
-        "    return {\"error\": raw_text}\n",
+        "    if isinstance(raw_text, str) and raw_text.startswith(\"Error:\"):\n",
+        "      return {\"error\": raw_text}\n",
         "\n",
-        "  # Regex to extract high/low temps and precipitation\n",
-        "  temp_rain_pattern = r'([+\\-]?\\d+°C)\\s*/\\s*([+\\-]?\\d+°C).*?rain:\\s*([\\d.]+)mm'\n",
-        "  matches = re.findall(temp_rain_pattern, raw_text)\n",
+        "    # Regex to extract high/low temps and precipitation\n",
+        "    temp_rain_pattern = r'([+\\-]?\\d+°C)\\s*/\\s*([+\\-]?\\d+°C).*?rain:\\s*([\\d.]+)mm'\n",
+        "    matches = re.findall(temp_rain_pattern, raw_text)\n",
         "\n",
-        "  # Regex to extract weather conditions (e.g., Sunny, Cloudy, Rain)\n",
-        "  condition_pattern = r'\\n\\s*[☀️🌤️🌧️🌩️❄️☁️⛅️]*\\s*([A-Z][a-z]+)'\n",
-        "  conditions = re.findall(condition_pattern, raw_text)\n",
+        "    # Regex to extract weather conditions (e.g., Sunny, Cloudy, Rain)\n",
+        "    condition_pattern = r'\\n\\s*[☀️🌤️🌧️🌩️❄️☁️⛅️]*\\s*([A-Z][a-z]+)'\n",
+        "    conditions = re.findall(condition_pattern, raw_text)\n",
         "\n",
-        "  forecast = []\n",
-        "  for i in range(min(forecast_days, len(matches))):\n",
-        "    high, low, rain = matches[i]\n",
-        "    condition = conditions[i] if i < len(conditions) else \"Unknown\"\n",
-        "    forecast.append({\n",
-        "      \"day\": i + 1,\n",
-        "      \"condition\": condition,\n",
-        "      \"high_temp\": high,\n",
-        "      \"low_temp\": low,\n",
-        "      \"precipitation_mm\": float(rain)\n",
-        "      })\n",
+        "    forecast = []\n",
+        "    for i in range(min(forecast_days, len(matches))):\n",
+        "      high, low, rain = matches[i]\n",
+        "      condition = conditions[i] if i < len(conditions) else \"Unknown\"\n",
+        "      forecast.append({\n",
+        "        \"day\": i + 1,\n",
+        "        \"condition\": condition,\n",
+        "        \"high_temp\": high,\n",
+        "        \"low_temp\": low,\n",
+        "        \"precipitation_mm\": float(rain)\n",
+        "        })\n",
         "\n",
-        "  return {\n",
-        "    \"location\": location,\n",
-        "    \"forecast_days\": len(forecast),\n",
-        "    \"forecast\": forecast\n",
-        "  }\n",
+        "    return {\n",
+        "      \"location\": location,\n",
+        "      \"forecast_days\": len(forecast),\n",
+        "      \"forecast\": forecast\n",
+        "    }\n",
         "\n",
         "  # Connection error\n",
         "  except ConnectionError:\n",
