Fix bug in create_visualisation() title

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -114,7 +114,7 @@
         "# 3. Visualisation Functions\n",
         "# =====================================\n",
         "# Show the weather forecast\n",
-        "def create_visualisation(weather_data: list[dict], output_type: str = 'display') -> None:\n",
+        "def create_visualisation(forecast_data, location, output_type='display'):\n",
         "  days = [entry['day'] for entry in weather_data]\n",
         "  high_temps = [entry['high_temp'] for entry in weather_data]\n",
         "  low_temps = [entry['low_temp'] for entry in weather_data]\n",
@@ -146,7 +146,7 @@
         "      color='darkgreen'\n",
         "    )\n",
         "\n",
-        "  plt.title(f'Weather Forecast for {weather_data[\"location\"]}: Temperature and Precipitation')\n",
+        "  plt.title(f'Weather Forecast for {location}: Temperature and Precipitation')\n",
         "  plt.tight_layout()\n",
         "\n",
         "  if output_type == 'figure':\n",
@@ -215,7 +215,7 @@
         "          print(f\"Day {proc['day']}: {raw['condition']}, \"\n",
         "          f\"High: {proc['high_temp']}°C, Low: {proc['low_temp']}°C, \"\n",
         "          f\"Rain: {proc['precipitation_mm']} mm\")\n",
-        "        create_visualisation(forecast_processed)\n",
+        "          create_visualisation(forecast_processed, weather_data[\"location\"])\n",
         "      else:\n",
         "        print(f\"Sorry, I couldn't find weather data for '{location}'. Please try another city.\")\n",
         "        continue\n",
