Add condition in preprocess_forecast_data()

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -104,6 +104,7 @@
         "    low = int(entry['low_temp'].replace(\"°C\", \"\").replace(\"+\", \"\"))\n",
         "    processed.append({\n",
         "      \"day\": entry['day'],\n",
+        "      \"condition\": entry.get('condition', Unknown)\n",
         "      \"high_temp\": high,\n",
         "      \"low_temp\": low,\n",
         "      \"precipitation_mm\": entry['precipitation_mm']\n",
