--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -94,7 +94,7 @@
         "    return None\n",
         "\n",
         "# =====================================\n",
-        "# 2. preprocess_forecast_data()\n",
+        "# 2. Preprocess Functions\n",
         "# =====================================\n",
         "# Preprocess the forecast\n",
         "def preprocess_forecast_data(raw_data):\n",
@@ -104,7 +104,7 @@
         "    low = int(entry['low_temp'].replace(\"°C\", \"\").replace(\"+\", \"\"))\n",
         "    processed.append({\n",
         "      \"day\": entry['day'],\n",
-        "      \"condition\": entry.get('condition', Unknown)\n",
+        "      \"condition\": entry.get('condition', \"Unknown\")\n",
         "      \"high_temp\": high,\n",
         "      \"low_temp\": low,\n",
         "      \"precipitation_mm\": entry['precipitation_mm']\n",
@@ -116,10 +116,10 @@
         "# =====================================\n",
         "# Show the weather forecast\n",
         "def create_visualisation(forecast_data, location, output_type='display'):\n",
-        "  days = [entry['day'] for entry in weather_data]\n",
-        "  high_temps = [entry['high_temp'] for entry in weather_data]\n",
-        "  low_temps = [entry['low_temp'] for entry in weather_data]\n",
-        "  precipitation = [entry['precipitation_mm'] for entry in weather_data]\n",
+        "  days = [entry['day'] for entry in forecast_data]\n",
+        "  high_temps = [entry['high_temp'] for entry in forecast_data]\n",
+        "  low_temps = [entry['low_temp'] for entry in forecast_data]\n",
+        "  precipitation = [entry['precipitation_mm'] for entry in forecast_data]\n",
         "\n",
         "  fig, ax1 = plt.subplots(figsize=(10, 6))\n",
         "\n",
@@ -153,7 +153,7 @@
         "  if output_type == 'figure':\n",
         "    return fig\n",
         "  elif output_type == 'save':\n",
-        "    plt.savefig(f\"{weather_data['location']}_forecast.png\")\n",
+        "    plt.savefig(f\"{forecast_data[0]['day']}_{location}_forecast.png\")\n",
         "    print(\"Graph saved!\")\n",
         "  else:\n",
         "    plt.show()\n",
