Add pyip in the command

--- a/starter_notebook.ipynb
+++ b/starter_notebook.ipynb
@@ -13,25 +13,29 @@
     {
       "cell_type": "code",
       "source": [
+        "# =====================================\n",
+        "# 1. Setup and Configuation\n",
+        "# =====================================\n",
         "!pip install fetch-my-weather\n",
         "!pip install hands-on-ai\n",
         "\n",
         "import os\n",
+        "import re\n",
+        "\n",
+        "import requests\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pyinputplus as pyip\n",
+        "\n",
+        "from fetch_my_weather import get_weather\n",
+        "from hands_on_ai.chat import get_response\n",
+        "\n",
         "\n",
         "os.environ['HANDS_ON_AI_SERVER'] = 'http://ollama.serveur.au'\n",
         "os.environ['HANDS_ON_AI_MODEL'] = 'granite3.2'\n",
         "os.environ['HANDS_ON_AI_API_KEY'] = input('Enter your API key: ')\n",
         "\n",
-        "# Setup and Configuation\n",
-        "import requests\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pyinputplus as pyip\n",
-        "from fetch_my_weather import get_weather\n",
-        "from hands_on_ai.chat import get_response\n",
-        "import re\n",
-        "\n",
         "# =====================================\n",
-        "# 1. Weather Data Functions\n",
+        "# 2. Weather Data Functions\n",
         "# =====================================\n",
         "# Get weather data\n",
         "def get_weather_data(location: str, forecast_days: int = 3) -> dict:\n",
@@ -94,7 +98,7 @@
         "    return None\n",
         "\n",
         "# =====================================\n",
-        "# 2. Preprocess Functions\n",
+        "# 3. Preprocess Functions\n",
         "# =====================================\n",
         "# Preprocess the forecast\n",
         "def preprocess_forecast_data(raw_data):\n",
@@ -104,7 +108,7 @@
         "    low = int(entry['low_temp'].replace(\"°C\", \"\").replace(\"+\", \"\"))\n",
         "    processed.append({\n",
         "      \"day\": entry['day'],\n",
-        "      \"condition\": entry.get('condition', \"Unknown\")\n",
+        "      \"condition\": entry.get('condition', \"Unknown\"),\n",
         "      \"high_temp\": high,\n",
         "      \"low_temp\": low,\n",
         "      \"precipitation_mm\": entry['precipitation_mm']\n",
@@ -112,7 +116,7 @@
         "  return processed\n",
         "\n",
         "# =====================================\n",
-        "# 3. Visualisation Functions\n",
+        "# 4. Visualisation Functions\n",
         "# =====================================\n",
         "# Show the weather forecast\n",
         "def create_visualisation(forecast_data, location, output_type='display'):\n",
@@ -189,7 +193,7 @@
         "    pass\n",
         "\n",
         "# =====================================\n",
-        "# 4. Main function\n",
+        "# 5. Main function\n",
         "# =====================================\n",
         "def main():\n",
         "  print(\"Hi I'm Weatherwise App!\")\n",
@@ -206,7 +210,9 @@
         "        print(\"Please enter a city name.\")\n",
         "        continue\n",
         "\n",
-        "      weather_data = get_weather_data(location)\n",
+        "      forecast_days = pyip.inputInt(prompt=\"How many days forecast? (1-5): \", min=1, max=5)\n",
+        "      weather_data = get_weather_data(location, forecast_days)\n",
+        "\n",
         "      if \"error\" not in weather_data:\n",
         "        forecast_raw = weather_data['forecast']\n",
         "        forecast_processed = preprocess_forecast_data(forecast_raw)\n",
@@ -234,15 +240,37 @@
         "if __name__ == '__main__':\n",
         "    main()\n",
         "\n",
-        "\n",
-        "\n",
         "# Testing and Examples\n",
         "# Include sample input/output for each function"
       ],
       "metadata": {
-        "id": "B2JKlJfrGgIb"
+        "id": "B2JKlJfrGgIb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 108
+        },
+        "outputId": "113ee146-07bd-459a-b0c5-46ffbc62062b"
       },
       "id": "B2JKlJfrGgIb",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax. Perhaps you forgot a comma? (<ipython-input-4-51a1329fdd67>, line 96)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-51a1329fdd67>\"\u001b[0;36m, line \u001b[0;32m96\u001b[0m\n\u001b[0;31m    \"condition\": entry.get('condition', \"Unknown\")\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1gUO29nkEey1"
+      },
+      "id": "1gUO29nkEey1",
       "execution_count": null,
       "outputs": []
     }
